  - Support to/from-cbor and to-debug methods for all Message classes
  - Serialize to CBOR even for Supplier connections

  [Error handling]
  - Shutdown, not just disconnect, in LocalUI.exit-with-errors
  - Exit with errors if missing requested game plugins
  - Don't crash if Supplier is disconnected before final response

  [Packaging]
  - Update Dockerfile dependency versions

  [Refactoring]
  - Factor common code out of CLI tools into LocalTool
  - Factor out decode-and-connect and initial-userpass into LocalUI
  - Factor out check directory exists before reading it in DevTool

  [Tools]
  - Add a new-ui-type command to mugs-tool
  - Reorient mugs-tool game/genre subcommands for multi-repo world


0.1.2  2021-05-13
  [MAJOR CHANGES]
  - In this release, network serialization has been completely switched over
    from JSON to CBOR (via CBOR::Simple and Cro::CBOR).  This allows a much
    richer data model on the wire, more accurate round-tripping, and much
    faster handling for floating point and packed binary data.

    HOWEVER: This also means that some data will be coming through in native
    (or in the case of enums, numeric) format, rather than converted to strings
    as with JSON.  You may be assuming receipt of string data in some places;
    expect to undo any workarounds you may have added.

    ALSO: In order to provide easier-to-read debugging output, some debug code
    outputs messages in prettified JSON format, which as mentioned above can't
    represent the full richness of CBOR data.  The following JSON::Fast PR will
    at least prevent debug output failures; if you're having debug issues,
    apply the JSON::Fast PR, reinstall it, and try again:

        https://github.com/timo/json_fast/pull/73

  [Bug fixes]
  - Fix a race condition in game client/UI startup
  - Don't create a second lobby client if directly entering lobby
  - Slightly improve invalid structure error messages