@@ -6,8 +6,8 @@
   "build-depends": [
   ],
   "depends": [
-    "CBOR::Simple:ver<0.0.8+>",
-    "Cro::CBOR:ver<0.0.2+>",
+    "CBOR::Simple:ver<0.0.9+>",
+    "Cro::CBOR:ver<0.0.3+>",
     "Cro::Core:ver<0.8.5+>",
     "Cro::HTTP:ver<0.8.5+>",
     "Cro::TLS:ver<0.8.5+>",
